--- a/default.css
+++ b/default.css
@@ -478,22 +478,22 @@
 		background: #FFF;
 	}
 
-	#wrapper3
-	{
-		background: #FFF;
-	}
-
 	#wrapper2
 	{
 		padding: 2em 0em;
 		background: #EDEDED;
 	}
 
+	#wrapper3
+	{
+		padding: 2.7em 0em;
+		background: #FFF;
+	}
+
 	#wrapper4
 	{
-		overflow: hidden;
-		padding: 8em 0em;
-		background: #E74E59;
+		padding: 2em 0em;
+		background: #3e3e3e;
 	}
 
 	#wrapper1 .content,
@@ -540,12 +540,160 @@
 		margin-bottom: 10px;
 	}
 
+	.subtitle-footer {
+		margin-bottom: 10px;
+	}
+
 	@media only screen and (max-width: 768px) {
 		/* Stack the sections on top of each other on smaller screens */
 
 
 		.column {
 			flex-basis: 100%; /* Each column takes full width */
+		}
+	}
+
+	.footer {
+		color: #FFFFFF;
+	}
+
+	.footer-logo{
+		width: 200px; /* Adjust the size as needed */
+		display: block; /* This makes the image take the full width of the link */
+		margin-bottom: 20px; /* Space between logo and Facebook icon */
+	}
+
+	.facebook-icon {
+		width: 40px; /* Adjust the size as needed */
+		display: block;
+		margin-left: 8px;
+	}
+
+	a {
+		color: yellow;
+	}
+
+	a:hover {
+		color: orange; /* Change color on hover, for example to orange */
+	}
+
+	.section-link {
+		color: #ED1A25;
+	}
+
+/*********************************************************************************/
+/* Carousel                                                                      */
+/*********************************************************************************/
+
+	/* Slideshow container */
+	.slideshow-container {
+		max-width: 50%;
+		position: relative;
+		margin: auto;
+		box-sizing: border-box;
+		overflow: hidden;
+	}
+
+	.aspect-ratio-wrapper {
+		position: relative;
+		height: 0;
+		padding-top: 70%; /* For keeping the same aspect ration of image carousel */
+	}
+
+	/* Hide the images by default */
+	.mySlides {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		display: none; /* Hide slides by default */
+	}
+
+	/* Next & previous buttons */
+	.prev, .next {
+		cursor: pointer;
+		position: absolute;
+		top: 50%;
+		width: auto;
+		margin-top: -22px;
+		padding: 16px;
+		color: white;
+		font-weight: bold;
+		font-size: 18px;
+		transition: 0.6s ease;
+		border-radius: 0 3px 3px 0;
+		user-select: none;
+		box-sizing:border-box;
+	}
+
+	/* Position the "next button" to the right */
+	.next {
+		right: 0;
+		border-radius: 3px 0 0 3px;
+		box-sizing:border-box;
+	}
+
+	/* On hover, add a black background color with a little bit see-through */
+	.prev:hover, .next:hover {
+		background-color: rgba(0,0,0,0.8);
+		box-sizing:border-box;
+	}
+
+	/* Caption text */
+	.text {
+		color: #f2f2f2;
+		font-size: 15px;
+		padding: 8px 12px;
+		position: absolute;
+		bottom: 8px;
+		width: 100%;
+		text-align: center;
+		box-sizing:border-box;
+	}
+
+	/* Number text (1/3 etc) */
+	.numbertext {
+		color: #f2f2f2;
+		font-size: 12px;
+		padding: 8px 12px;
+		position: absolute;
+		top: 0;
+		box-sizing:border-box;
+	}
+
+	/* The dots/bullets/indicators */
+	.dot {
+		cursor: pointer;
+		height: 15px;
+		width: 15px;
+		margin: 0 2px;
+		background-color: #bbb;
+		border-radius: 50%;
+		display: inline-block;
+		transition: background-color 0.6s ease;
+		box-sizing:border-box;
+	}
+
+	.active, .dot:hover {
+		background-color: #717171;
+		box-sizing:border-box;
+	}
+
+	/* Fading animation */
+	.fade {
+		animation-name: fade;
+		animation-duration: 1.5s;
+		box-sizing:border-box;
+	}
+
+	@keyframes fade {
+		from {opacity: .4}
+		to {opacity: 1}
+	}
+
+	@media only screen and (max-width: 768px) {
+		.slideshow-container {
+			max-width: 100%;
 		}
 	}
 
