--- a/admin_panel.css
+++ b/admin_panel.css
@@ -58,6 +58,7 @@ label {
 input[type="text"],
 input[type="number"],
 input[type="date"],
+input[type="password"],
 textarea {
     width: 100%;
     padding: 10px;
