the-centre.html page is ready + modified the first section of index.html

--- a/default.css
+++ b/default.css
@@ -600,6 +600,10 @@
 		}
 	}
 
+	.centre-image {
+		max-width: 100%;
+	}
+
 /*********************************************************************************/
 /* Welcome                                                                       */
 /*********************************************************************************/
