--- a/default.css
+++ b/default.css
@@ -33,20 +33,6 @@
 	{
 		line-height: 180%;
 	}
-	
-	strong
-	{
-	}
-	
-	a
-	{
-		color: #0000FF;
-	}
-	
-	a:hover
-	{
-		text-decoration: none;
-	}
 
 
 	/* Container */
@@ -66,30 +52,14 @@
 	}
 
 
-	/*********************************************************************************/
+/*********************************************************************************/
 /* Form Style                                                                    */
 /*********************************************************************************/
 
 		form
 		{
 		}
-		
-			form label
-			{
-				display: block;
-				text-align: left;
-				margin-bottom: 0.5em;
-			}
 			
-			form .submit
-			{
-				margin-top: 2em;
-				background: #8DCB89;
-				border-radius: 8px;
-				line-height: 1.5em;
-				font-size: 1.3em;
-			}
-		
 			form input.text,
 			form select,
 			form textarea
@@ -99,10 +69,7 @@
 				position: relative;
 				-webkit-appearance: none;
 				display: block;
-				border: 0;
 				background: #fff;
-				background: rgba(255,255,255,0.75);
-				width: 100%;
 				border-radius: 0.50em;
 				margin: 1em 0em;
 				padding: 1.50em 1em;
@@ -120,12 +87,6 @@
 				color: black; /* Ensure input text is black */
 				text-align: left; /* Align text to the left */
 			}
-
-				form input.text:hover,
-				form select:hover,
-				form textarea:hover
-				{
-				}
 
 				form input.text:focus,
 				form select:focus,
@@ -169,23 +130,6 @@
 				{
 					border: 0;
 				}
-
-
-/*********************************************************************************/
-/* Image Style                                                                   */
-/*********************************************************************************/
-
-
-
-/*********************************************************************************/
-/* List Styles                                                                   */
-/*********************************************************************************/
-
-
-
-/*********************************************************************************/
-/* Social Icon Styles                                                            */
-/*********************************************************************************/
 	
 
 /*********************************************************************************/
@@ -223,33 +167,6 @@
 	.button.email-button {
 		cursor: pointer;
 	}
-	
-	.button:before
-	{
-		display: inline-block;
-		background: #040404;
-		margin-right: 1em;
-		width: 40px;
-		height: 40px;
-		line-height: 40px;
-		border-radius: 20px;
-		text-align: center;
-		color: #000000;
-	}
-	
-	.button-small
-	{
-		padding: 0.9em 2em;
-		background: #8DCB89;
-		border-radius: 5px;
-		line-height: 1.8em;
-		font-size: 1em;
-	}
-		
-/*********************************************************************************/
-/* Heading Titles                                                                */
-/*********************************************************************************/
-
 
 /*********************************************************************************/
 /* Header                                                                        */
@@ -273,10 +190,6 @@
 		z-index: -1;
 	}
 
-	#header {
-		/* Additional styling for the header if needed */
-	}
-
 /*********************************************************************************/
 /* Logo                                                                          */
 /*********************************************************************************/
@@ -291,11 +204,6 @@
 		max-width: 50%; /* Ensures the image is responsive */
 		height: auto;
 		/* You can adjust the max-height or width as per your design */
-	}
-	
-	#logo h1
-	{
-
 	}
 	
 	#logo a
@@ -321,10 +229,6 @@
 /*********************************************************************************/
 /* Menu                                                                          */
 /*********************************************************************************/
-
-	#menu
-	{
-	}
 	
 	#menu ul
 	{
@@ -366,15 +270,9 @@
 		background: #ED1A25; /* solid red for current page */
 		color: #FFF; /* white text for current page */
 	}
-	
 
 /*********************************************************************************/
-/* Banner                                                                        */
-/*********************************************************************************/
-
-
-/*********************************************************************************/
-/* Wrapper                                                                       */
+/* Wrappers and sections                                                         */
 /*********************************************************************************/
 
 	#wrapper1
@@ -448,28 +346,9 @@
 		margin-bottom: 10px;
 	}
 
-	@media only screen and (max-width: 768px) {
-		/* Stack the sections on top of each other on smaller screens */
-		.column {
-			flex-basis: 100%; /* Each column takes full width */
-		}
-	}
-
-	.footer {
-		color: #FFFFFF;
-	}
-
-	.footer-logo{
-		width: 200px; /* Adjust the size as needed */
-		display: block; /* This makes the image take the full width of the link */
-		margin-bottom: 20px; /* Space between logo and Facebook icon */
-	}
-
-	.facebook-icon {
-		width: 40px; /* Adjust the size as needed */
-		display: block;
-		margin-left: 8px;
-	}
+/*********************************************************************************/
+/* Links                                                                         */
+/*********************************************************************************/
 
 	a {
 		color: #ED1A25;
@@ -481,6 +360,11 @@
 
 	.section-link {
 		color: #ED1A25;
+	}
+
+	a:hover
+	{
+		text-decoration: none;
 	}
 
 /*********************************************************************************/
@@ -542,28 +426,6 @@
 		box-sizing:border-box;
 	}
 
-	/* Caption text */
-	.text {
-		color: #f2f2f2;
-		font-size: 15px;
-		padding: 8px 12px;
-		position: absolute;
-		bottom: 8px;
-		width: 100%;
-		text-align: center;
-		box-sizing:border-box;
-	}
-
-	/* Number text (1/3 etc) */
-	.numbertext {
-		color: #f2f2f2;
-		font-size: 12px;
-		padding: 8px 12px;
-		position: absolute;
-		top: 0;
-		box-sizing:border-box;
-	}
-
 	/* The dots/bullets/indicators */
 	.dot {
 		cursor: pointer;
@@ -594,35 +456,9 @@
 		to {opacity: 1}
 	}
 
-	@media only screen and (max-width: 768px) {
-		.slideshow-container {
-			max-width: 100%;
-		}
-	}
-
 	.centre-image {
 		max-width: 100%;
 	}
-
-/*********************************************************************************/
-/* Welcome                                                                       */
-/*********************************************************************************/
-
-
-/*********************************************************************************/
-/* Page                                                                          */
-/*********************************************************************************/
-
-
-/*********************************************************************************/
-/* Content                                                                       */
-/*********************************************************************************/
-
-
-/*********************************************************************************/
-/* Sidebar                                                                       */
-/*********************************************************************************/
-
 
 /*********************************************************************************/
 /* Footer                                                                        */
@@ -639,21 +475,25 @@
 		color: rgba(255,255,255,0.4);
 	}
 
-/*********************************************************************************/
-/* Copyright                                                                     */
-/*********************************************************************************/
+	.footer {
+		color: #FFFFFF;
+	}
 
+	.footer-logo{
+		width: 200px; /* Adjust the size as needed */
+		display: block; /* This makes the image take the full width of the link */
+		margin-bottom: 20px; /* Space between logo and Facebook icon */
+	}
 
-/*********************************************************************************/
-/* Newsletter                                                                    */
-/*********************************************************************************/
-
-
+	.facebook-icon {
+		width: 40px; /* Adjust the size as needed */
+		display: block;
+		margin-left: 8px;
+	}
 	
 /*********************************************************************************/
-/* Portfolio                                                                     */
+/* Responsiveness                                                                */
 /*********************************************************************************/
-
 
 	/* Responsive Design */
 	@media only screen and (max-width: 768px) {
@@ -672,6 +512,14 @@
 			margin: 5px 0;
 		}
 
+		/* Stack the sections on top of each other on smaller screens */
+		.column {
+			flex-basis: 100%; /* Each column takes full width */
+		}
+
+		.slideshow-container {
+			max-width: 100%;
+		}
 	}
 
 	/* Additional media query for very small screens like mobile phones */
@@ -682,6 +530,10 @@
 		}
 
 	}
+
+/*********************************************************************************/
+/* Google map                                                                    */
+/*********************************************************************************/
 
 .map-section{
 	background: #ED1A25;
