finished language switch button

--- a/default.css
+++ b/default.css
@@ -250,6 +250,27 @@ form ::-moz-focus-inner {
     color: #FFF; /* white text for current page */
 }
 
+#menu li#language-option a {
+    padding: 0;
+    vertical-align: middle;
+
+    display: inline-block;
+    margin-left: 0.50em;
+    letter-spacing: 0.20em;
+    text-decoration: none;
+    font-size: 0.90em;
+    font-weight: 600;
+    text-transform: none;
+    outline: 0;
+    color: #FFF;
+}
+
+#langSwitch img {
+    max-height: 45px; /* Adjust this value as needed */
+    border-radius: 8px;
+    width: auto; /* Maintain aspect ratio */
+}
+
 /*********************************************************************************/
 /* Wrappers and sections                                                         */
 /*********************************************************************************/
@@ -559,18 +580,4 @@ a:hover {
 
 .accordion .accordion-content.active + .accordion-title .arrow {
     transform: rotate(180deg);
-}
-
-#langSwitch img {
-    max-height: 16px; /* Adjust this value as needed */
-    width: auto; /* Maintain aspect ratio */
-}
-
-#language-option a, #language-option span {
-    display: inline-block;
-    margin-left: 0.50em;
-
-
-    outline: 0;
-    color: #FFF;
 }
